syntax = "proto3";

option go_package = "wireless_lab_1/grpc/mp4";

package mp4;

message FileChunk {
    bytes chunk = 1;
}

message FileUpload {
    bytes chunk = 1;
    string file_name = 2;
}

message FileRequest {
    string file_name = 1;
}

message FileResponse {
    bytes file_content = 1;
}

service MP4Service {
    rpc UploadFile(stream FileUpload) returns (FileResponse);
    rpc DownloadFile(FileRequest) returns (stream FileChunk);
}
